implemented common style sheet and updated styles of all pages. remade su-goals to use seperate elements for multi-view and one for edit-view.

--- a/src/behaviors/animations/admin-pages-animation.html
+++ b/src/behaviors/animations/admin-pages-animation.html
@@ -5,8 +5,8 @@
 <link rel="import" href="../../../bower_components/neon-animation/animations/hero-animation.html" />
 <link rel="import" href="../../../bower_components/neon-animation/animations/slide-from-left-animation.html" />
 <link rel="import" href="../../../bower_components/neon-animation/animations/slide-left-animation.html" />
-<link rel="import" href="../../../bower_components/neon-animation/animations/slide-from-top-animation.html" />
-<link rel="import" href="../../../bower_components/neon-animation/animations/slide-down-animation.html" />
+<link rel="import" href="./slide-down-exit-animation.html" />
+<link rel="import" href="./slide-down-entry-animation.html" />
 
 
 <script>
@@ -35,12 +35,12 @@
         if(curCat==="admin" && intCat==="admin"){
           this.animationConfig={};
           this.animationConfig.entry={
-            name:"slide-from-top-animation",
+            name:"slide-down-entry-animation",
             node: this,
             timing:{duration:500}
           };
           this.animationConfig.exit={
-            name:"slide-down-animation",
+            name:"slide-down-exit-animation",
             node: this,
             timing:{duration:500}
           };
