--- a/src/pages/care-plan/su-goals/dependencies.html
+++ b/src/pages/care-plan/su-goals/dependencies.html
@@ -12,14 +12,20 @@
 <link rel="import" href="../../../../bower_components/iron-icon/iron-icon.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/iron-icons.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/editor-icons.html" />
-<link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
 <link rel="import" href="../../../../bower_components/paper-progress/paper-progress.html" />
+<link rel="import" href="../../../../bower_components/neon-animation/neon-animated-pages.html" />
+
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
 <link rel="import" href="../../../elements/guuey-notify/guuey-notify.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/guuey-new-goal-modal/guuey-new-goal-modal.html" />
-<link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
 
+<link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
+
+<link rel="import" href="./su-goals-edit-view.html" />
+<link rel="import" href="./su-goals-multi-view.html" />
