--- a/src/pages/care-plan/su-medical/dependencies.html
+++ b/src/pages/care-plan/su-medical/dependencies.html
@@ -3,11 +3,13 @@
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-query.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
-<link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
+
 <link rel="import" href="../../../elements/firebase-storage/firebase-storage.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
