--- a/src/pages/care-plan/su-pre/dependencies.html
+++ b/src/pages/care-plan/su-pre/dependencies.html
@@ -6,11 +6,13 @@
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
-<link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
+
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
 <link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
 
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
