--- a/src/pages/care-plan/su-risk/dependencies.html
+++ b/src/pages/care-plan/su-risk/dependencies.html
@@ -4,7 +4,6 @@
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../../bower_components/paper-fab/paper-fab.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
-<link rel="import" href="../../../../bower_components/app-layout/app-grid/app-grid-style.html" />
 <link rel="import" href="../../../../bower_components/paper-dialog/paper-dialog.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-textarea.html" />
@@ -14,10 +13,13 @@
 <link rel="import" href="../../../../bower_components/iron-icons/iron-icons.html" />
 <link rel="import" href="../../../../bower_components/iron-icons/editor-icons.html" />
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
+
 <link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
 <link rel="import" href="../../../elements/guuey-slider/guuey-slider.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
-<link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
 
+<link rel="import" href="../../../behaviors/fab-animation-behavior.html" />
 <link rel="import" href="../../../behaviors/animations/care-plan-animation.html" />
+
+<link rel="import" href="../../../styles/common-styles.html" />
